# BonsaiEcosystem

./: .gitattributes  .gitignore  10x10_TEST_REPORT.md  AETHER_ARIADB_INTEGRATION.md  AHF_IMPLEMENTATION_PLAN.md  AI_OPTIONAL_ECOSYSTEM_SUMMARY.md  ANDROID_BRIDGE_COMPLETION_REPORT.md  ANDROID_BRIDGE_FINAL_SUMMARY.txt  ANDROID_BRIDGE_INTEGRATION_COMPLETE.md  ANDROID_BRIDGE_QUICK_REFERENCE.md  ANDROID_BRIDGE_STRATEGIC_BRIEFING.md  ANDROID_BRIDGE_VISION.md  API_DOCUMENTATION_COMPLETION.md  API_IMPLEMENTATION_REPORT.md  APPLICATION_REGISTRY_SYSTEM_COMPLETE.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE_GUIDE.md  AUTOMATED_BUG_HUNT_EXECUTION.md  BEDF_ADVANCED_ENHANCEMENTS.md  BEDF_ARCHITECTURE.md  BEDF_IMPLEMENTATION_PLAN.md  BEDF_SYSTEM_ACTIVE.md  BENCHMARKING_FRAMEWORK_MANIFEST.md  BONSAI_AI_OPTIONAL_BACKBONE.md  BONSAI_APP_MENU_INTEGRATION.md  BONSAI_ECOSYSTEM_COMPLETE_VISION.md  BONSAI_ENCLAVE_COMPLETE.md  BPLIS_ARCHITECTURE.md  BPLIS_COMPLETE.md  BRDF_IMPLEMENTATION_COMPLETE.txt  BRDF_STATUS_REPORT.md  BUEB_STATUS.md  BUG_CATALOGUE_COMPLETE.md  BUG_HUNTER_ERROR_DATABASE.md  BUG_HUNTER_MCP_USAGE.md  BUG_HUNTER_SURVIVAL_INTEGRATION.md  BUG_HUNTER_TEST_SCENARIO.md  BUG_HUNT_SESSION_REPORT.md  BUG_RECORDING_SUMMARY.md  BUILD_AND_RUN_GUIDE.md  (+202 more)
Omnisystem/Conductor/: ADVANCED_AGENT_SWARM_COMPLETE.md  ADVANCED_AGENT_SWARM_SPECIFICATION.md  ADVANCED_ANALYTICS_INTELLIGENCE_SPECIFICATION.md  API_MARKETPLACE_ECOSYSTEM_SPECIFICATION.md  AUTONOMOUS_ENTERPRISE_SYSTEM_SPECIFICATION.md  BUILD_STATUS.md  BUILD_STATUS_COMPLETE.md  COMPLETE_PLATFORM_DELIVERY.md  CONDUCTOR_COMPLETE.md  CONDUCTOR_FINAL_STATUS.md  CONDUCTOR_IMPLEMENTATION_STATUS.md  Cargo.toml  FINAL_AUTONOMOUS_ENTERPRISE_COMPLETE.md  GLOBAL_OPERATIONS_PLATFORM_COMPLETE.md  GLOBAL_OPERATIONS_PLATFORM_SPECIFICATION.md  INTEGRATED_ECOSYSTEM_SUMMARY.md  OMNIDOCKER_COMPLETE_DELIVERY.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  QUICK_START.md  UNIVERSAL_INTEGRATION_HARNESS_COMPLETE.md  UNIVERSAL_OMNISYSTEM_HARNESS_SPECIFICATION.md  generate_all_phases.sh  generate_analytics.py  generate_autonomous.py  generate_ecosystem.py  generate_harness.py  generate_operations.py  generate_swarm.py  implement_phase2.sh
Omnisystem/Conductor/src/: main.rs
bonsai-native/: Cargo.toml
bonsai-native/src/: engine.rs  ffi.rs  lib.rs  memory.rs
bonsai-workspace/src-tauri/: Cargo.toml  tauri.conf.json
bonsai-workspace/src-tauri/capabilities/: default.json  mobile.json
bonsai-workspace/src-tauri/sidecars/: image_edit_worker.py  pixai_worker.py  video_worker.py
bonsai-workspace/src-tauri/src/: a2a_server.rs  adapter_manager.rs  android_bridge_commands.rs  api_server.rs  assistant_backup.rs  assistant_manager.rs  assistant_metrics.rs  assistant_policy.rs  assistant_tools.rs  auth_commands.rs  avatar_validator.rs  belief_reviser.rs  bonsai_md.rs  bootstrap.rs  brain_metadata.rs  buddy_api_server.rs  capability_commands.rs  chat_sessions.rs  cluster_credits_commands.rs  cluster_orchestrator.rs  collaboration_commands.rs  commands.rs  config.rs  context_builder.rs  continuous_training.rs  crash_recovery.rs  critic.rs  cross_training.rs  data_curator.rs  (+95 more)
crates/adaptive-benchmarks/: Cargo.toml
crates/aether-clojure/: Cargo.toml
crates/ahf-arbiter/: Cargo.toml
crates/ahf-bias-detector/: Cargo.toml
crates/ahf-core/: Cargo.toml
crates/ahf-formal-verifier/: Cargo.toml
crates/ahf-gateway/: Cargo.toml
crates/ahf-integration-tests/: Cargo.toml
crates/ahf-knowledge-grounding/: Cargo.toml
crates/ai-advisor/: Cargo.toml
crates/api-bridge/: Cargo.toml  build.rs
crates/app-menu/: Cargo.toml
crates/audit-log/: Cargo.toml
crates/axiom-verify/: Cargo.toml
crates/bedf-fuzzing/: Cargo.toml
crates/bedf-mcp/: Cargo.toml
crates/bedf.disabled/: Cargo.toml
crates/bkp/: Cargo.toml
crates/bonsai-algorithm-optimization/: Cargo.toml
crates/bonsai-android-bridge/: ANDROID_AGENT.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION.md  README.md
crates/bonsai-api-bridge/: Cargo.toml  routes.yaml
crates/bonsai-api-gateway/: Cargo.toml
crates/bonsai-auth/: Cargo.toml
omnisystem-gui/: ALL_5540_COMPONENTS_MASTER_REFERENCE.md  BASE_COMPONENTS_LIBRARY_TIER1.tsx  BASE_COMPONENTS_LIBRARY_TIER3_TO_6.tsx  BUILD_ALL_COMPONENTS_REPORT.md  COMPLETE_3500_COMPONENTS_BUILT.md  COMPLETE_BASE_COMPONENTS_INDEX.md  COMPONENT_BUILD_COMPLETE.md  CONTINUOUS_EXPANSION_PHASE_8_9.md  Cargo.toml  DESKTOP_APP_GUIDE.md  FRAMEWORK_GENERATION_COMPLETE_FINAL_REPORT.md  FRAMEWORK_GENERATION_COMPLETE_OUTPUT.md  GENERATED_ASSETS_INDEX.md  GENERATED_BUTTON_COMPONENTS.tsx  GENERATE_ALL_5540_ASSETS.py  GENERATE_ALL_INDIVIDUAL_ASSETS.js  GENERATE_FINAL_5540_ASSETS.py  GENERATE_INDIVIDUAL_ASSETS.py  GENERATION_COMPLETE_MANIFEST.md  HUNDREDS_MORE_COMPONENTS_ADDED.md  OMNISYSTEM_GUI_UNLIMITED_VARIANTS.md  OMNISYSTEM_HOT_RELOAD_ENGINE.ts  README.md  TESTING_COMPLETE.md  TEST_RESULTS.md  WEB_ASSETS_COMPLETE_GENERATION_REPORT.md  WEB_ASSETS_EXTENDED_MEGA_CATALOG.md  WEB_ASSETS_GENERATION_COMPLETE.md  WEB_ASSETS_INTEGRATION_GUIDE.md  WEB_ASSETS_QUICK_REFERENCE.md  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
omnisystem-gui/components/: ALL_5540_BASE_COMPONENTS_COMPLETE.tsx  BASE_COMPONENTS_LIBRARY_TIER2.tsx  FRAMEWORK_GENERATED_COMPONENTS_BUTTONS.tsx  FRAMEWORK_GENERATED_COMPONENTS_INPUTS_CARDS_CHARTS.tsx  GENERATED_COMPONENTS_MASTER_CATALOG.ts  GENERATED_THEMES.ts
omnisystem-gui/scripts/: GENERATE_UNIVERSAL_ASSETS.py
omnisystem-gui/src/: main.rs
omnisystem-gui/src-ui/: App-Extra.css  App.tsx  AssetFrameworkDashboard.css
polyglot-pong/: Cargo.toml  README.md  dashboard.html  orchestrator_enclave.py
polyglot-pong/common/: Cargo.toml
polyglot-pong/dashboard/: Cargo.toml
polyglot-pong/graph-analyzer/: Cargo.toml
polyglot-pong/orchestrator/: Cargo.toml
polyglot-pong/sandbox/: Cargo.toml
src-daemon/: Cargo.toml
src-daemon/src/: checkpoint_impl.rs  health_monitor.rs  main.rs  rpc.rs  state.rs
(+26833 files in other folders)
