[workspace]
# BACE-optimized workspace structure:
# - Foundation crates (BACE + core infrastructure)
# - Subsystems in their own workspaces (avoid circular dependencies)
# For the Tauri app: cd bonsai-workspace && cargo tauri build
# For BACE-accelerated builds: cargo bace build

resolver = "2"

members = [
    # ========== LAIR (Language-Agnostic IR) ==========
    "crates/core-ir",                  # Language-Agnostic Intermediate Representation

    # ========== BACE Foundation (Function-Level Compilation) ==========
    "crates/compile-cache",            # Local compilation cache
    "crates/cas-ext",                  # CAS extensions for BACE
    "crates/hotreload",                # Hot-reload macro and runtime
    "crates/bace-rustc",               # BACE Rust compiler wrapper
    "crates/bace-rt",                  # BACE runtime and proc-macro
    "crates/cargo-bace",               # cargo-bace CLI subcommand

    # ========== Language System ==========
    "crates/language-system",          # Language frontend trait & registry
    "crates/regex-frontend",           # Regex fallback frontend for languages without LSP
    "lang-gen",                        # Meta-generator tool for creating language crates (root level)

    # ========== Language Runtimes ==========
    "crates/clojure-jvm",              # Clojure JVM runtime with sandbox

    # ========== Wave 2: Clojure Integration ==========
    "crates/titan-core",               # Phase 2: Verified Titan core (persistent data structures)
    "crates/clojurescript-compiler",   # Phase 3: ClojureScript compiler
    "crates/clojure-wasm",             # Phase 4: Clojure WASM
    "crates/aether-clojure",           # Phase 5: Aether distributed agents
    "crates/clojure-formal-verify",    # Phase 6: Clojure formal verification
    "crates/clojure-ecosystem",        # Phase 7: Clojure ecosystem & documentation

    # ========== Wave 3: HDE (Hybrid Determinism Engine) ==========
    "crates/hde-ai-advisor",           # Component 1: AI Advisor Orchestrator
    "crates/hde-safety-envelope",      # Component 2: Safety Envelope
    "crates/hde-model-framework",      # Component 3: Model Framework
    "crates/hde-shadow-mode",          # Component 4: Shadow Mode Validation
    "crates/hde-runtime",              # Integrated HDE runtime combining all components

    # ========== Wave 4: Bonsai Buddy ==========
    "crates/bonsai-buddy-backend",     # Tauri app backend foundation (IPC, API client, state, sync)
    "crates/bonsai-buddy-agent",       # Component 1: Standalone Agent
    "crates/bonsai-buddy-offline-sync", # Component 2: Offline Sync
    "crates/bonsai-buddy-crdt",        # Component 3: CRDT Snapshot Merging

    # ========== Integration & System Testing ==========
    "crates/omnisystem-integration-tests", # Full system integration tests
    "crates/omnisystem-examples",         # Usage examples and patterns
    "crates/omnisystem-config",           # Configuration and builder framework

    # ========== Service Management ==========
    "crates/service-manager",          # Service Lifecycle Manager (SLM) – Phase 2
    "crates/kernel-snapshot",          # Phase 1: Kernel extensions (snapshot_vault/restore_vault)
    "crates/ums-service",              # Phase 3: UMS service integration
    "crates/service-sdk",              # Phase 4: Service SDK (Snapshotable trait)
    "crates/buddy-agent",              # Phase 5: Bonsai Buddy integration
    "crates/hde-orchestrator",         # Phase 6: HDE AI Advisor Orchestrator
    "crates/model-builder",            # Phase 7: Model Building Framework
    "crates/axiom-verify",             # Phase 8: Axiom formal verification

    # ========== Compiled Objects ==========
    "crates/co",                       # Compiled Objects (serialized functions)

    # ========== Omnisystem Languages ==========
    "crates/omnisystem-sylva",         # Sylva scripting language
    "crates/omnisystem-titan",         # Titan systems language
    "crates/omnisystem-aether",        # Aether actor language

    # ========== Execution Backend ==========
    "crates/backend",                  # Hardware abstraction & device allocation

    # ========== Bare-Metal Kernel ==========
    # "crates/kernel",              # USOS Co-OS x86_64 bare-metal kernel (disabled: x86_64 crate has unstable features)

    # ========== Legacy Foundation (keep for compatibility) ==========
    "runtime",
    "src-daemon",

    # ========== Pre-Compilation Fabric ==========
    "crates/compiler-cache",           # Speculative pre-compilation with AI hints

    # ========== P2P Transport ==========
    "crates/p2p-identity",             # Self-certifying identity (Iroh-inspired)
    "crates/p2p-crypto",               # Post-quantum hybrid cryptography
    "crates/p2p-core",                 # Deterministic core (no AI required)
    "crates/transfer-ai",              # Optional AI enhancements (feature-gated)

    # ========== Messaging Fabric ==========
    "crates/msg-core",                 # Core messaging types and encryption
    "crates/msg-smtp",                 # SMTP server
    "crates/msg-imap",                 # IMAP server
    "crates/msg-p2p",                  # P2P delivery via TransferDaemon
    "crates/msg-server",
    "crates/model-workshop",           # Model training and management
    "crates/mcp-manager",              # MCP server management

    # ========== Environment Manager ==========
    "crates/sandbox",                  # Universal dependency and environment manager

    # ========== UI Orchestration ==========
    "crates/ui-orchestrator",          # UI component management
    "crates/ui-utils",                 # UI utilities and helpers

    # ========== Validation Mesh ==========
    "crates/test-orchestrator",        # Unified Test Orchestration Fabric
    "crates/ubvm-core",                # Core types and traits
    "crates/ubvm-ulb",                 # Universal Language Binding (750+ languages)
    "crates/ubvm-suites",              # 10 comprehensive test suites
    "crates/ubvm-axiom",               # Formal verification with Axiom
    "crates/ubvm-mesh",                # Planet-scale distributed mesh

    # ========== OpenCV 5 Integration ==========
    # Phase 2: Rust Port
    "crates/cv",                       # Rust FFI bindings and safe wrappers
    "crates/cv-async",                 # Async/await integration
    "crates/cv-tests",                 # UVM test harness

    # Phase 1: Native & Build System
    "crates/opencv-manifest",          # UMS module manifest definitions
    "crates/opencv-build",             # Build orchestration

    # Phase 3: Titan Rewrite
    "crates/titan-opencv",             # Titan core implementation
    "crates/titan-opencv-imgproc",     # Image processing module

    # Phase 4: Sylva Scripting
    "crates/sylva-opencv",             # Sylva scripting wrapper

    # Phase 5: Aether Distribution
    "crates/aether-vision",            # Distributed actor pipelines

    # Phase 6: Axiom Proofs
    "crates/axiom-opencv",             # Formal specifications

    # Phase 7: Validation & Rollout
    "crates/cv-uvm",                   # Universal Validation Mesh

    # ========== Omni-Bot (New Generation Control Agent) ==========
    "crates/omni-bot-core",            # Core types and traits
    "crates/omni-bot-actors",          # Aether actor implementations
    "crates/omni-bot-api",             # REST/WebSocket API layer
    "crates/omni-bot",                 # Main application
    "crates/omni-bot-tests",           # Comprehensive integration test suite
]

[workspace.lints.rust]
unsafe_code = "warn"
unused_results = "warn"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bonsai Team <team@bonsai.sh>"]
license = "Apache-2.0"
repository = "https://github.com/bonsai/bonsai-bedf"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dashmap = "5"
once_cell = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
handlebars = "4"
zstd = "0.13"

# ============================================================================
# Release Profile — Optimized for deployment
# ============================================================================
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16              # Balance: compile fast, link fast
panic = "abort"
strip = false                   # Keep symbols for crash triage
split-debuginfo = "packed"

# ============================================================================
# Development Profile — Optimized for instant feedback
# ============================================================================
[profile.dev]
debug = 1
opt-level = 0                   # No optimization, just compile
codegen-units = 256             # Max parallelism: 1 unit per core
incremental = true
split-debuginfo = "packed"

# ============================================================================
# Test Profile — Balance speed and coverage
# ============================================================================
[profile.test]
debug = 1
opt-level = 1
codegen-units = 256
incremental = true
split-debuginfo = "packed"

# ============================================================================
# BACE Profile — Optimized for function-level incremental compilation
# ============================================================================
[profile.bace-dev]
inherits = "dev"
codegen-units = 1            # Required for BACE function extraction
lto = false                  # BACE needs unoptimized code for hot-reload
opt-level = 0
debug = 2                    # Full debug info for BACE to map functions
incremental = true
